syntax="proto3";
import "google/protobuf/empty.proto";

package manager;

// Interface exported by the parser/manager node.
service ManagerService {
    // Methods for use by workers
    rpc RegisterWorker(WorkerProperties) returns (WorkerMetadata);
    rpc GetGraphFragment(WorkerProperties) returns (stream GraphPiece);

    // Methods for use by executers
    rpc GetWorkersList(google.protobuf.Empty) returns (WorkersList);
}

message WorkerProperties {
    // Address on which Worker listens for Executers
    string listening_address = 1;
}

message WorkerMetadata {
    uint32 worker_id = 1;
}

message WorkersList {
    message WorkerEntry {
        uint32 worker_id = 1;
        string address = 2;
    }

    repeated WorkerEntry workers = 1;
}

message Node {
    uint64 node_id = 1;
}

message Edge {
    uint64 node_from_id = 2;
    uint64 node_to_id = 3;
    uint64 weight = 4;

    // If the edge is a boundary edge, this field is present and denotes ID of
    // the next worker.
    optional uint32 node_to_worker_id = 5;
}

message GraphPiece {
    oneof GraphElement {
        Node nodes = 1;
        Edge edges = 2;
    }
}
